--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 
 </head>
 <body>
-
-    <h1>Bienvenido</h1>
+    <header>
+        <nav>
+            <ul class="barraNava">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Articulos</a> </li>
+                <li><a class="img-logo" href="index.html"><img src="./img/logo-patitas.png" alt="logo-patitas"></a></li>
+                <li><a href="#">Gatos</a></li>
+                <li><a href="#">Perros</a></li>
+            </ul>
+        </nav>
+    </header>
+    
     
 </body>
 </html>
