--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
 
             <h3>Categorias</h3>
             <div class="categorias-imagenes">
-                <img src="img/concentrado-perro.png" alt="">
-                <img src="img/concentrado-perro.png" alt="">
-                <img src="img/concentrado-perro.png" alt="">
-                <img src="img/concentrado-perro.png" alt="">
-                <img src="img/concentrado-perro.png" alt="">
-
+                <img src="./img/comida.png" alt="">
+                <img src="./img/peineta.jpg" alt="">
+                <img src="./img/juguetes.png" alt="">
+                <img src="acc" alt="">
+                <img src="com" alt="">
             </div>
         </section>
 
