--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
 
             <h3>Categorias</h3>
             <div class="categorias-imagenes">
-                <img src="./img/comida.png" alt="">
-                <img src="./img/peineta.jpg" alt="">
-                <img src="./img/juguetes.png" alt="">
-                <img src="acc" alt="">
-                <img src="com" alt="">
+                <a href="Alimento.html"><img src="./img/Alimento01.png" alt=""></a>
+                <a href="Complementos.html"><img src="./img/complementos04.png" alt=""></a>
+                <a href="Jugueteria.html"><img src="./img/juguetes03.png" alt=""></a>
+                <a href="Belleza_e_Higiene.html"><img src="./img/bellezaHigiene02.png" alt=""></a>
             </div>
         </section>
 
