--- a/index.html
+++ b/index.html
@@ -182,30 +182,38 @@
 </section>
 
 
-    <footer class="footer">
-        <img class="logopat" src="./img/Logo blanco PNG.png" alt="Logo">
-        <div>
+ <footer class="footer">
+      <img class="logopat" src="./img/Logo blanco PNG.png" alt="Logo" />
+
+      <div>
         <h3>Acerca de Patitas Puppy</h3>
         <p>Nuestra historia</p>
-        </div>
-        <div>
+        <p>Quienes Somos</p>
+        <p>Trabaja con nosotros</p>
+      </div>
+
+      <div>
         <h3>Información</h3>
         <p>Telefono</p>
         <p>Correo</p>
         <p>Colombia,Medellín</p>
+      </div>
+      <div>
+        <h3>Links de Interés</h3>
+        <p>Cuidos</p>
+        <p>Cuidado Animal</p>
+      </div>
+      <div>
+        <h3>Siguenos en Nuestras Redes</h3>
+        <div class="redes-sociales">
+          <img
+            class="insta"
+            src="./img/Instagram.png"
+            alt="Logo de Instagram"
+          />
+          <img class="what" src="./img/whatsapp.png" alt="Logo de Whatsapp" />
         </div>
-        <div>
-            <h3>Links de Interés</h3>
-            <p></p>
-        </div>
-        <div>
-            <h3>Siguenos en Nuestras Redes</h3>
-            <div class="redes-sociales">
-                <img class="insta" src="./img/Instagram.png" alt="Logo de Instagram">
-                <img class="what" src="./img/whatsapp.png" alt="Logo de Whatsapp">
-            </div>
-        </div>
-        
+      </div>
     </footer>
 
     
