--- a/gato.html
+++ b/gato.html
@@ -40,7 +40,8 @@
         <div class="contenido-mascota perro">
           <p>Productos para</p>
           <h3>Perros</h3>
-          <a href="perro.html"><img src="img/border.png" alt="img-dog" /> hola</a>
+          <a href="perro.html"></a>
+          <img src="img/border.png" alt="img-dog" />
         </div>
 
         <div class="contenido-mascota gato">
