--- a/index.html
+++ b/index.html
@@ -34,20 +34,21 @@
 
     <main>
 
-        <section class="tipo-mascota contenedor">
+      <section class="tipo-mascota contenedor">
+        <div class="contenido-mascota perro">
+          <p>Productos para</p>
+          <h3>Perros</h3>
+          <a href="perro.html"><img src="img/border.png" alt="img-dog" /> </a>
+        </div>
 
-            <div class="contenido-mascota perro">
-                <p>Productos para </p>
-                <h3>Perros</h3>
-                <img src="img/border.png" alt="img-dog">
-            </div>
+        <div class="contenido-mascota gato">
+          <p>Productos para</p>
+          <h3>Gatos</h3>
+          <a href="perro.html"><img src="img/cat.png" alt="img-dog" /></a>
 
-            <div class="contenido-mascota gato">
-                <p>Productos para </p>
-                <h3>Gatos</h3>
-                <img src="img/cat.png" alt="img-dog">
-            </div>
-        </section>
+          
+        </div>
+      </section>
 
         
         <section class="categorias contenedor">
