add categorias en todos los html

--- a/Belleza_e_Higiene.html
+++ b/Belleza_e_Higiene.html
@@ -34,9 +34,21 @@
         <img src="img/Banner 2.jpg" alt="banner" />
       </div>
     </header>
+
+      <section id="categorias" class="categorias contenedor">
+        <h3>Categorias</h3>
+            <div class="categorias-imagenes">
+                <a href="Alimento.html"><img src="./img/Alimento01.png" alt=""></a>
+                <a href="Complementos.html"><img src="./img/complementos04.png" alt=""></a>
+                <a href="Jugueteria.html"><img src="./img/juguetes03.png" alt=""></a>
+                <a href="Belleza_e_Higiene.html"><img src="./img/bellezaHigiene02.png" alt=""></a>
+            </div>
+      </section>
+
     <div class="letra-categorias">
-      <h1>Belleza e Higiene</h1>
+      <h2>Belleza e Higiene</h2>
     </div>
+
     <section class="cards contenedor">
       <div class="card">
         <img src="img/cuido01.jpeg" alt="" />
