--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="contenido-mascota gato">
           <p>Productos para</p>
           <h3>Gatos</h3>
-          <a href="perro.html"><img src="img/cat.png" alt="img-dog" /></a>
+          <a href="gato.html"><img src="img/cat.png" alt="img-dog" /></a>
 
           
         </div>
