--- a/perro.html
+++ b/perro.html
@@ -40,26 +40,31 @@
         <div class="contenido-mascota perro">
           <p>Productos para</p>
           <h3>Perros</h3>
-          <a href="perro.html"><img src="img/border.png" alt="img-dog" /> hola</a>
+          <a href="perro.html"><img src="img/border.png" alt="img-dog" /> </a>
         </div>
 
         <div class="contenido-mascota gato">
           <p>Productos para</p>
           <h3>Gatos</h3>
-          <img src="img/cat.png" alt="img-dog" />
+          <a href="gato.html"><img src="img/cat.png" alt="img-dog" /></a>
+
+          
         </div>
       </section>
 
       <section id="categorias" class="categorias contenedor">
         <h3>Categorias</h3>
-        <div class="categorias-imagenes">
-          <a href=""><img src="img/concentrado-perro.png" alt="" /></a>
-          <a href=""><img src="img/concentrado-perro.png" alt="" /></a>
-          <a href=""><img src="img/concentrado-perro.png" alt="" /></a>
-          <a href=""><img src="img/concentrado-perro.png" alt="" /></a>
-          <a href=""><img src="img/concentrado-perro.png" alt="" /></a>
-        </div>
+            <div class="categorias-imagenes">
+                <a href="Alimento.html"><img src="./img/Alimento01.png" alt=""></a>
+                <a href="Complementos.html"><img src="./img/complementos04.png" alt=""></a>
+                <a href="Jugueteria.html"><img src="./img/juguetes03.png" alt=""></a>
+                <a href="Belleza_e_Higiene.html"><img src="./img/bellezaHigiene02.png" alt=""></a>
+            </div>
       </section>
+
+      <div class="titulos-categoria">
+        <h2>Productos para Perros</h2>
+      </div>
 
       <section id="productos" class="cards contenedor">
         <div class="card">
