add img seccions

--- a/Alimento.html
+++ b/Alimento.html
@@ -49,101 +49,101 @@
       <h2>Alimentos</h2>
     </div>
 
-    <section class="cards contenedor">
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
+       <section id="productos" class="cards contenedor">
+            <div class="card">
+                <img src="img/cuido01.jpeg" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
 
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
+            <div class="card">
+                <img src="img/hills_puppy.avif" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
 
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
+            <div class="card">
+                <img src="img/hills_small.avif" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
 
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
+            <div class="card">
+                <img src="img/proPlan.avif" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
 
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-    </section>
+            <div class="card">
+                <img src="img/royal_canin.avif" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
+            <div class="card">
+                <img src="img/royal_miniAdult.avif" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
+        </section>
 
-    <section class="cards contenedor">
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
+        <section class="cards contenedor">
+            <div class="card">
+                <img src="img/royal_puppy.avif" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
+            <div class="card">
+                <img src="img/royal_cat.avif" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
+            <div class="card">
+                <img src="img/royal_catfit.avif" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
 
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-    </section>
+            <div class="card">
+                <img src="img/royal_catKitten.avif" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
+    
+            <div class="card">
+                <img src="img/besties_lataAzul.avif" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
+            <div class="card">
+                <img src="img/besties_latanaranja.avif" alt="">
+                <p class="descripcion">Una descripcion</p>
+                <h4>Besties</h4>
+                <p>Descripcion del producto</p>
+                <p>Precio <span>$10</span></p>
+            </div>
+        </section>
 
     <section class="contacto contenedor">
       <div>
