--- a/Belleza_e_Higiene.html
+++ b/Belleza_e_Higiene.html
@@ -51,7 +51,7 @@
 
     <section class="cards contenedor">
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/aseo01.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -59,7 +59,7 @@
       </div>
 
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/aseo02.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -67,7 +67,7 @@
       </div>
 
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/aseo03.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -75,7 +75,7 @@
       </div>
 
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/aseo04.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -83,14 +83,14 @@
       </div>
 
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/aseo05.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
         <p>Precio <span>$10</span></p>
       </div>
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/aseo06.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -98,52 +98,7 @@
       </div>
     </section>
 
-    <section class="cards contenedor">
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
 
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-    </section>
 
     <section class="contacto contenedor">
       <div>
