--- a/Jugueteria.html
+++ b/Jugueteria.html
@@ -52,7 +52,7 @@
 
     <section class="cards contenedor">
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/juguetes01.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/juguetes02.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -68,54 +68,7 @@
       </div>
 
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-    </section>
-
-    <section class="cards contenedor">
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/juguetes03.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -145,6 +98,8 @@
         <p>Precio <span>$10</span></p>
       </div>
     </section>
+
+
 
     <section class="contacto contenedor">
       <div>
