--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </section>
 
-       <section class="cards contenedor">
+       <section id="productos" class="cards contenedor">
             <div class="card">
                 <img src="img/cuido01.jpeg" alt="">
                 <p class="descripcion">Una descripcion</p>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="card">
-                <img src="img/cuido01.jpeg" alt="">
+                <img src="img/hills_puppy.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
                 <p>Descripcion del producto</p>
@@ -84,7 +84,7 @@
             </div>
 
             <div class="card">
-                <img src="img/cuido01.jpeg" alt="">
+                <img src="img/hills_small.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
                 <p>Descripcion del producto</p>
@@ -92,7 +92,7 @@
             </div>
 
             <div class="card">
-                <img src="img/cuido01.jpeg" alt="">
+                <img src="img/proPlan.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
                 <p>Descripcion del producto</p>
@@ -100,14 +100,14 @@
             </div>
 
             <div class="card">
-                <img src="img/cuido01.jpeg" alt="">
+                <img src="img/royal_canin.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
                 <p>Descripcion del producto</p>
                 <p>Precio <span>$10</span></p>
             </div>
             <div class="card">
-                <img src="img/cuido01.jpeg" alt="">
+                <img src="img/royal_miniAdult.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
                 <p>Descripcion del producto</p>
@@ -123,21 +123,21 @@
 
         <section class="cards contenedor">
             <div class="card">
-                <img src="img/cuido01.jpeg" alt="">
+                <img src="img/royal_puppy.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
                 <p>Descripcion del producto</p>
                 <p>Precio <span>$10</span></p>
             </div>
             <div class="card">
-                <img src="img/cuido01.jpeg" alt="">
+                <img src="img/royal_cat.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
                 <p>Descripcion del producto</p>
                 <p>Precio <span>$10</span></p>
             </div>
             <div class="card">
-                <img src="img/cuido01.jpeg" alt="">
+                <img src="img/royal_catfit.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
                 <p>Descripcion del producto</p>
@@ -145,7 +145,7 @@
             </div>
 
             <div class="card">
-                <img src="img/cuido01.jpeg" alt="">
+                <img src="img/royal_catKitten.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
                 <p>Descripcion del producto</p>
@@ -153,14 +153,14 @@
             </div>
     
             <div class="card">
-                <img src="img/cuido01.jpeg" alt="">
+                <img src="img/besties_lataAzul.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
                 <p>Descripcion del producto</p>
                 <p>Precio <span>$10</span></p>
             </div>
             <div class="card">
-                <img src="img/cuido01.jpeg" alt="">
+                <img src="img/besties_latanaranja.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
                 <p>Descripcion del producto</p>
