--- a/perro.html
+++ b/perro.html
@@ -68,7 +68,7 @@
 
       <section id="productos" class="cards contenedor">
         <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
+          <img src="img/royal_canin.avif" alt="" />
           <p class="descripcion">Una descripcion</p>
           <h4>Besties</h4>
           <p>Descripcion del producto</p>
@@ -76,7 +76,7 @@
         </div>
 
         <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
+          <img src="img/royal_miniAdult.avif" alt="" />
           <p class="descripcion">Una descripcion</p>
           <h4>Besties</h4>
           <p>Descripcion del producto</p>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
+          <img src="img/royal_puppy.avif" alt="" />
           <p class="descripcion">Una descripcion</p>
           <h4>Besties</h4>
           <p>Descripcion del producto</p>
@@ -92,7 +92,7 @@
         </div>
 
         <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
+          <img src="img/hills_puppy.avif" alt="" />
           <p class="descripcion">Una descripcion</p>
           <h4>Besties</h4>
           <p>Descripcion del producto</p>
@@ -100,61 +100,20 @@
         </div>
 
         <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
+          <img src="img/hills_small.avif" alt="" />
           <p class="descripcion">Una descripcion</p>
           <h4>Besties</h4>
           <p>Descripcion del producto</p>
           <p>Precio <span>$10</span></p>
         </div>
         <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
+          <img src="img/proPlan.avif" alt="" />
           <p class="descripcion">Una descripcion</p>
           <h4>Besties</h4>
           <p>Descripcion del producto</p>
           <p>Precio <span>$10</span></p>
         </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
+
       </section>
     </main>
 
