--- a/gato.html
+++ b/gato.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
+          <img src="img/royal_cat.avif" alt="" />
           <p class="descripcion">Una descripcion</p>
           <h4>Besties</h4>
           <p>Descripcion del producto</p>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
+          <img src="img/royal_catfit.avif" alt="" />
           <p class="descripcion">Una descripcion</p>
           <h4>Besties</h4>
           <p>Descripcion del producto</p>
@@ -92,7 +92,7 @@
         </div>
 
         <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
+          <img src="img/royal_catKitten.avif" alt="" />
           <p class="descripcion">Una descripcion</p>
           <h4>Besties</h4>
           <p>Descripcion del producto</p>
@@ -100,61 +100,20 @@
         </div>
 
         <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
+          <img src="img/besties_lataAzul.avif" alt="" />
           <p class="descripcion">Una descripcion</p>
           <h4>Besties</h4>
           <p>Descripcion del producto</p>
           <p>Precio <span>$10</span></p>
         </div>
         <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
+          <img src="img/besties_latanaranja.avif" alt="" />
           <p class="descripcion">Una descripcion</p>
           <h4>Besties</h4>
           <p>Descripcion del producto</p>
           <p>Precio <span>$10</span></p>
         </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
-        <div class="card">
-          <img src="img/cuido01.jpeg" alt="" />
-          <p class="descripcion">Una descripcion</p>
-          <h4>Besties</h4>
-          <p>Descripcion del producto</p>
-          <p>Precio <span>$10</span></p>
-        </div>
+
       </section>
     </main>
 
