--- a/Complementos.html
+++ b/Complementos.html
@@ -52,7 +52,7 @@
 
     <section class="cards contenedor">
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/acces01.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/acces02.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -68,7 +68,7 @@
       </div>
 
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/acces03.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -76,7 +76,7 @@
       </div>
 
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/acces04.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -84,14 +84,14 @@
       </div>
 
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/acces05.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
         <p>Precio <span>$10</span></p>
       </div>
       <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
+        <img src="img/acces06.avif" alt="" />
         <p class="descripcion">Una descripcion</p>
         <h4>Besties</h4>
         <p>Descripcion del producto</p>
@@ -99,52 +99,7 @@
       </div>
     </section>
 
-    <section class="cards contenedor">
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
 
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-    </section>
 
     <section class="contacto contenedor">
       <div>
