--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </section>
     </main>
 
-    <section class="contacto contenedor ">
+    <section id="contacto" class="contacto contenedor ">
     <div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15865.385736460263!2d-75.58587725!3d6.21796405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sco!4v1698784984233!5m2!1ses-419!2sco" width="350" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
