--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patitas Puppy</title>
+    <link rel="shortcut icon" href="img/Logo amarillo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="img/logo-patitas02.png">
@@ -71,39 +72,41 @@
                 <img src="img/cuido01.jpeg" alt="">
                 <p class="descripcion">Una descripcion</p>
                 <h4>Besties</h4>
-                <p>Descripcion del producto</p>
+                <p>Arena furry premium 10 Kg + Besties Alimento Gatos Sabor Carne y Pollo 3 Kg.</p>
+                <p></p>
+                
                 <p>Precio <span>$10</span></p>
             </div>
 
             <div class="card">
                 <img src="img/hills_puppy.avif" alt="">
-                <p class="descripcion">Una descripcion</p>
-                <h4>Besties</h4>
-                <p>Descripcion del producto</p>
+                <p class=""></p>
+                <h4>Hills</h4>
+                <p>Hills science diet puppy small bites dog, El alimento seco está cuidadosamente formulado para las necesidades de desarrollo de los cachorros, y así tener el mejor comienzo en la vida y crecer a su máximo potencial.</p>
                 <p>Precio <span>$10</span></p>
             </div>
 
             <div class="card">
                 <img src="img/hills_small.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
-                <h4>Besties</h4>
-                <p>Descripcion del producto</p>
+                <h4>Royal Cani Mini</h4>
+                <p>Royal Canin - Mini Puppy, ha sido formulado teniendo en cuenta las necesidades nutricionales de tu cachorro y está indicado para perros de 2 a 10 meses con un peso adulto de hasta 10kg.</p>
                 <p>Precio <span>$10</span></p>
             </div>
 
             <div class="card">
                 <img src="img/proPlan.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
-                <h4>Besties</h4>
-                <p>Descripcion del producto</p>
+                <h4>Pro plan</h4>
+                <p>Con efecto simbiótico de prebiótico y probióticos que contribuyen juntos a la salud del sistema digestivo.</p>
                 <p>Precio <span>$10</span></p>
             </div>
 
             <div class="card">
                 <img src="img/royal_canin.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
-                <h4>Besties</h4>
-                <p>Descripcion del producto</p>
+                <h4>Royal Canin</h4>
+                <p>Royal Canin Yorkshire Terrier Adult es una dieta específica para razas puras de Yorkie. Las croquetas especializadas facilitan que los perros pequeños las agarren y las mastiquen. </p>
                 <p>Precio <span>$10</span></p>
             </div>
             <div class="card">
@@ -125,7 +128,7 @@
             <div class="card">
                 <img src="img/royal_puppy.avif" alt="">
                 <p class="descripcion">Una descripcion</p>
-                <h4>Besties</h4>
+                <h4>Royal Canin</h4>
                 <p>Descripcion del producto</p>
                 <p>Precio <span>$10</span></p>
             </div>
