--- a/nosotros.html
+++ b/nosotros.html
@@ -37,14 +37,19 @@
 
     <main>
       <section class="contenedor-nosotros">
-        <div class="imagen-nosotros contenedor"></div>
+        <div class="imagen-nosotros contenedor">
+          <img src="img/img-nosotros.avif" alt="">
+        </div>
         <div class="texto-nosotros contenedor">
           <h1>Sobre Nosotros</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta sint
-            esse nesciunt ea perferendis mollitia praesentium accusamus commodi
-            eaque placeat at cumque corrupti, dolorum aliquam porro autem nulla
-            adipisci inventore.
+            <strong>Visión</strong>: Nuestra visión en el mundo del e-commerce para mascotas es la de construir una comunidad vibrante y afectuosa donde cada mascota y su dueño encuentren un hogar digital lleno de amor, cuidado y comodidad. Nos esforzamos por ser el destino definitivo para los amantes de las mascotas, ofreciendo una variedad incomparable de productos de alta calidad que van desde alimentos nutritivos y juguetes divertidos hasta accesorios elegantes. Aspiramos a ser líderes en innovación, proporcionando a nuestros clientes una experiencia de compra en línea fácil y emocionante mientras cultivamos una cultura de responsabilidad y pasión por el bienestar animal.
+          </p>
+
+          <p><strong>Misión</strong>: En nuestro e-commerce, nos dedicamos a enriquecer la vida de las mascotas y sus familias. Nuestra misión es ofrecer productos cuidadosamente seleccionados que promuevan la salud, la felicidad y el vínculo entre las personas y sus animales de compañía. Nos comprometemos a fomentar la adopción responsable, apoyar refugios y organizaciones benéficas, y educar a nuestros clientes sobre la importancia del cuidado adecuado de las mascotas. Estamos dedicados a proporcionar un servicio excepcional, brindando orientación experta y creando un espacio donde cada cliente se sienta valorado y comprendido.</p>
+
+          <p>
+            <strong>Valores</strong>: Nuestros valores se basan en el respeto, la integridad y el amor por los animales. Creemos en la transparencia en todos nuestros procesos, desde la selección de productos hasta las prácticas comerciales éticas. Valoramos la diversidad y la inclusión, fomentando un ambiente donde todas las mascotas y sus dueños sean bienvenidos y respetados. Además, nos comprometemos a ser sostenibles y ecoamigables en nuestras operaciones, contribuyendo positivamente al medio ambiente y a las comunidades en las que operamos. En última instancia, nuestros valores guían cada decisión que tomamos para asegurar que nuestros clientes y sus mascotas reciban lo mejor en todo momento.
           </p>
         </div>
       </section>
