--- a/gato.html
+++ b/gato.html
@@ -31,7 +31,7 @@
       </nav>
 
       <div class="banner">
-        <img src="img/Banner 2.jpg" alt="banner" />
+        <img src="img/bannerRoyal01.avif" alt="banner" />
       </div>
     </header>
 
