--- a/Belleza_e_Higiene.html
+++ b/Belleza_e_Higiene.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="img/logo-patitas02.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&family=Roboto+Condensed:wght@100;400;600&family=Roboto:wght@300;400;500;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/sytles.css" />
   </head>
@@ -131,6 +131,9 @@
         </div>
       </div>
     </section>
+    <div class="wha">
+      <i class="fa-brands fa-whatsapp"></i>
+    </div>
 
     <footer class="footer">
       <img class="logopat" src="./img/Logo blanco PNG.png" alt="Logo" />
