--- a/Complementos.html
+++ b/Complementos.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="img/logo-patitas02.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&family=Roboto+Condensed:wght@100;400;600&family=Roboto:wght@300;400;500;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/sytles.css" />
   </head>
@@ -21,9 +21,7 @@
           <li><a href="index.html">Categoria</a></li>
           <li><a href="index.html">Productos</a></li>
           <li>
-            <a class="img-logo" href="index.html"
-              ><img src="./img/logo-patitas02.png" alt="logo-patitas"
-            /></a>
+            <a class="img-logo" href="index.html"><img src="./img/logo-patitas02.png" alt="logo-patitas"/></a>
           </li>
           <li><a href="nosotros.html">Sobre Nosotros</a></li>
           <li><a href="index.html">Contactenos</a></li>
@@ -132,7 +130,9 @@
         </div>
       </div>
     </section>
-
+    <div class="wha">
+      <i class="fa-brands fa-whatsapp"></i>
+    </div>
     <footer class="footer">
       <img class="logopat" src="./img/Logo blanco PNG.png" alt="Logo" />
 
