--- a/nosotros.html
+++ b/nosotros.html
@@ -38,7 +38,7 @@
     <main>
       <section class="contenedor-nosotros">
         <div class="imagen-nosotros contenedor">
-          <img src="img/img-nosotros.avif" alt="">
+          <img src="img/NosotrosDog.png" alt="">
         </div>
         <div class="texto-nosotros contenedor">
           <h1>Sobre Nosotros</h1>
